# snake

./: .gitignore  .ycm_extra_conf.py
data/: res.xml  scores  settings
data/fonts/: invaders.fnt  main.fnt
proj.android/: AndroidManifest.xml  ant.properties  ant_debug.sh  build-run.sh  build.sh  build.xml  default.properties  install.sh  project.properties
proj.android/jni/: Application.mk
proj.android/jni/src/: Android.mk
proj.android/res/values/: strings.xml
proj.android/src/org/oxygine/snake/: MainActivity.java
proj.cmake/: CMakeLists.txt  run.sh
src/: .Game.cpp.swp  .Scene.cpp.swp  Ads.cpp  Ads.h  Bonus.cpp  Bonus.h  Game.cpp  Game.h  Menu.cpp  Menu.h  Scene.cpp  Scene.h  Scoreboard.cpp  Scoreboard.h  Snake.cpp  Snake.h  entry_point.cpp  first.cpp  first.h  params.h
